# chirpycritter

./: .gitignore  Cargo.toml  README.md
examples/: beep2.rs  bweeoop.rs  ethics.mid  ethics.rs  god_rest_ye.mid  god_rest_ye.rs  idyll.mid  idyll.rs  minimal.mid
src/: bureaucracy.rs  envelope.rs  generator.rs  lib.rs  midi.rs  patch.rs  song.rs  stock.rs  time.rs  traits.rs  waveform.rs
src/bank/: mod.rs
src/content/: mod.rs  sample_patch.rs
src/critter/: ensemble.rs  generator.rs  main.rs  mod.rs  modulators.rs  patch.rs  patch_data.rs  playback.rs  sample_patch.rs  shared.rs  trigger.rs  vcf.rs  voice.rs
src/host/: bufs.rs  midi.rs  mod.rs  realtime.rs  traits.rs  wavexport.rs
src/math/: interpolation.rs  mod.rs  tables.rs  time.rs  waveform.rs
src/math/envelope/: adsr.rs  echoes.rs  lfo.rs  mod.rs
src/presets/: mod.rs  sample_patch.rs
src/song/: mod.rs
tools/: tables.py  tables.txt
