[package]
name = "chirpycritter"
version = "0.1.0"
authors = ["Nyeogmi <economicsbat@gmail.com>"]
description = "Chirpy retro PWM synthesizer implemented on CPAL"
readme = "README.md"
homepage = "https://github.com/nyeogmi/chirpycritter"
repository = "https://github.com/nyeogmi/chirpycritter"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.4"
midly = "0.5.2"  # TODO: Gate behind a feature
wav = "1.0.0"
fastapprox = "0.3.0"
wide = "0.7.1"